Fjerner brev bestilt historikkinnslag og endrer et par titler + fjerner unødvendig kode